// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavBar /> should match its "bottom" theme snapshot 1`] = `
<div
  className="sc-bdVaJa jzmFzK"
/>
`;

exports[`<NavBar /> should match its "sizing" theme snapshot 1`] = `
<div
  className="sc-bdVaJa jbKrkc"
/>
`;

exports[`<NavBar /> should match its "sizingMarket" theme snapshot 1`] = `
<div
  className="sc-bdVaJa lcfMjb"
/>
`;

exports[`<NavBar /> should match its "top" theme snapshot 1`] = `
<div
  className="sc-bdVaJa crfISE"
/>
`;

exports[`<NavBar /> should match its empty snapshot 1`] = `
<div
  className="sc-bdVaJa kEBNxY"
/>
`;
